--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
     "name": "Baby Monitor",
     "short_name": "Baby Monitor",
+    "version": "1.1.3",
     "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#000",
